@@ -12,6 +12,7 @@
 -refactor vector to optimize.
 -revise mixer set_num_channels method.
 -refactor mixer music rewind method.
+-revise mixer channel play promise handling.
 
 0.26    2022-04-18
 -revise textarea object.
